<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="facebook_app_id">1933096166965164</string>
    <string name="app_name">KiKi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_username">Login with Username</string>
    <string name="create_an_account">Sign Up</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="app_id">4F8B3483</string>
    <string name="playback">Playback</string>
    <string name="enter_login">Login</string>
    <string name="enter_with">with</string>
    <string name="enter_register">Register</string>
    <string name="view_tv">View TV</string>
    <string name="language_label">Language *:</string>
    <string name="gender_label">Gender *:</string>
    <string name="birth_year_label">Birth Date:</string>
    <string name="more_details_on_register">You have been logged in. We need some info</string>
    <string name="login">Sign In</string>
    <string name="name_label">Name:</string>
    <string name="password_label">Password*</string>
    <string name="username_label">Username*</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register">Sign Up</string>
    <string name="mobile_number">Mobile No.*:</string>
    <string name="please_wait">Please wait</string>
    <string name="more_episodes">MORE EPISODES</string>
    <string name="video_tab">VIDEO</string>
    <string name="audio_tab">MUSIC</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="close">CLOSE</string>
    <string name="new_playlist">New Playlist</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="removed_from_lib">Removed from library</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder </string>
    <string name="description">Media Player</string>
    <string name="title_activity_full_screen">FullScreenActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="login_with_twitter">Login With Twitter</string>
    <string name="please_select">Please Select</string>
    <string name="title_activity_my_packages">Package</string>
    <string name="promo_code">Promo Code / Scratch Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_my_programs">My Programs</string>
    <string name="menu_activate_packages">Subscription</string>
    <string name="menu_contact_support">Contact Support</string>
    <string name="menu_chile_mode">Child Mode</string>
    <string name="child_mode_act">Child mode is activated</string>
    <string name="child_mode_deact">Child mode is deactivated</string>
    <string name="child_mode_act_pass">Please enter password to activate child mode</string>
    <string name="child_mode_deact_pass">Please enter password to deactivate child mode</string>
    <string name="no_subscribed_programs">No subscribed programs available. Please subscribe to your favorite programs from Mobile TV.</string>
    <string name="menu_channels">Channels</string>
    <string name="menu_guide">Guide</string>
    <string name="menu_library">Library</string>
    <string name="menu_history">History</string>
    <string name="menu_watch_later">Watch Later</string>
    <string name="menu_logout">Logout</string>
    <string name="welcome_user">Welcome %1$s!</string>
    <string name="network_problem_message">There was a problem when connecting to the KiKi server, Please check your Internet connection.</string>
    <string name="google_play_service_unavilable">Google Play Services is not available or is not updated. Please install or update your Google, Google Home and Google Play Services apps</string>
    <string name="error_config_fetching">Error while getting configs</string>
    <string name="off">Off</string>
    <string name="paypal">Paypal</string>
    <string name="enter_kiki">Enter Kiki</string>
    <string name="change_later_in_settings">You can change later in settings</string>
    <string name="update_profile_details">Update your profile details</string>
    <string name="acctivate_kiki">Thank you for activating Kiki</string>
    <string name="trial_period_text">Your 14 days trial period has started.\nYou will be charged after the trial period ends.</string>
    <string name="trial_period__settings_text">To change or cancel your package later,\ngo to the packages in the menu.</string>
    <string name="reset_confirmation_code">A confirmation code will be sent to your number to reset password</string>
    <string name="reset_confirm_code">Please confirm your code</string>
    <string name="forgot_password_greating">A confirmation code has been sent to your number. Please enter it to reset password for</string>
    <string name="reset_password">Reset Password</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="type_new_password">Type your new password</string>
    <string name="type_new_password_again">Type your new password again</string>
    <string name="activate_kiki_reset">%1$s your password has been reset</string>
    <string name="login_reset">Login</string>
    <string name="login_new_password">Please login with your new password.</string>
    <string name="song_duration"> "" + minutes</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="type_password">Type your password</string>
    <string name="enter_username">Type your username</string>
    <string name="create_an_account_login">Create an account</string>
    <string name="username">Username</string>
    <string name="select_language">Select your language here *:</string>
    <string name="select_gender">Select your gender here *:</string>
    <string name="select_dob">Select your date of birth here</string>
    <string name="already_liked">This Episodes has been already liked</string>
    <string name="already_subscribed">This Program has been already subscribed</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="need_permissions">We need your Manage Phone Calls permission to provide better user experience when you receive a call while watching the TV.
        This is due to new runtime permission model introduced in Android 6 and onwards.
        Your phone calls will not be managed by this app in anyway as per our privacy policy. You will not be able to continue until you provide this permission. Please feel free to grant the permission.</string>
    <string name="user_already_liked">You have already liked this video.</string>
    <string name="user_already_unliked">You have already disliked this video.</string>
    <string name="thanks_adding_like">Thank you for adding like to the video.</string>
    <string name="thanks_adding_unlike">You disliked the video.</string>
    <string name="notification_deleted">Deleted</string>
    <string name="user_already_subscribed">You have already subscribed to the program.</string>
    <string name="item_image_contentDescription">Country flag</string>
    <string name="item_preview_country">Israel (‫ישראל‬‎)</string>
    <string name="item_preview_dialCode">+972</string>
    <string name="connecting_please_wait">Connecting please wait...</string>
    <string name="i_don_t_have_a_social"><u>I don\'t have Facebook or Gmail</u></string>
    <string name="popup_subscribe_text">To activate \nor\ncontinue\nyour existing subscription,</string>
    <string name="popup_subscribe_text_click">click</string>
    <string name="you_also_like">You Might Also Like</string>
    <string name="popular_songs">Popular Songs</string>
    <string name="latest_songs">Latest Songs</string>
    <string name="radio_channel">Radio Channels</string>
    <string name="popular_artists">Popular Artists</string>
    <string name="artists">Artists</string>
    <string name="latest_playlist">Latest Playlist</string>
    <string name="daily_mix_for_you">Daily Mix For You</string>
    <string name="browse">Browse</string>
    <string name="library">Library</string>
    <string name="genre_wise">By Genre</string>
    <string name="artist_wise">By Artist</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="song">Song</string>
    <string name="artist">Artist</string>
    <string name="playlists">Playlists</string>
    <string name="your_playlist">Your Playlist</string>
    <string name="add_to_library">Add to Library</string>
    <string name="add_to_playlist">Add to Playlist ></string>
    <string name="add_to_playlist_2">Add to Playlist</string>
    <string name="kiki_playlist">KiKi Playlist</string>
    <string name="genre">Genres</string>
    <string name="songs">Songs</string>
    <string name="added_to_playlist">Added to Playlist</string>
    <string name="no_playlist_found">No playlist found</string>
    <string name="added_to_library">Added to library</string>
    <string name="listen_to_fav">listen to your favorites</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_this_from_library">Do you want to remove this from library?</string>
    <string name="music_confirm">Confirm</string>
    <string name="music_edit">(edit)</string>
    <string name="edit_playlist">Edit</string>
    <string name="no_search_found">No search results found.</string>
    <string name="add_all">Add all</string>
    <string name="clear_all">Remove all</string>
    <string name="recent_search">Recent search</string>
    <string name="add_songs">Add Songs</string>
    <string name="audio_removed">Removed</string>
    <string name="playlist_created">Your playlist created</string>
    <string name="playlist_edited">Your playlist edited successfully.</string>
    <string name="radio_drama">Radio Dramas</string>
    <string name="play_2">Play</string>
    <string name="play_random">Play Random</string>
    <string name="play">PLAY</string>
    <string name="play_trailer">PLAY TRAILER</string>
    <string name="date">Friday 22 December</string>
    <string name="recently_played">Recently Played</string>
    <string name="see_all">See all</string>
    <string name="view_all">View all</string>
    <string name="home">Home</string>
    <string name="favarites">Favarites</string>
    <string name="playlist">Playlist</string>
    <string name="create_account">Create an account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Login</string>
    <string name="sign_in_button">Login</string>
    <string name="type_username">Type your username</string>
    <string name="password">Password</string>
    <string name="enter_password">Type your password</string>
</resources>