<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearLayout2"
        android:background="@color/colorRegistrationBackgroud"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
            android:id="@+id/enter_username_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginBottom="1dp"
            android:padding="@dimen/_5sdp"
            android:text="@string/username"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/username_layout"
            app:layout_constraintStart_toStartOf="parent" />


        <RelativeLayout
            android:id="@+id/username_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:gravity="center"
            android:background="@drawable/rounded_background_mobile_number"
            app:layout_constraintBottom_toTopOf="@+id/enter_password_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <lk.mobilevisions.kiki.audio.util.KikiMediumEditText
                    android:id="@+id/user_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/type_username"
                    android:inputType="textNoSuggestions"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>


        <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
            android:id="@+id/enter_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:padding="@dimen/_5sdp"
            android:text="@string/password"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/password_layout"
            app:layout_constraintStart_toStartOf="parent" />


        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_35sdp"
            android:gravity="center"
            android:background="@drawable/rounded_background_mobile_number"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false">

                <lk.mobilevisions.kiki.audio.util.KikiMediumEditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/sign_in_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_35sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_35sdp"
            android:background="@drawable/rounded_login_button1"
            app:layout_constraintBottom_toTopOf="@+id/create_account_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
                android:id="@+id/sign_in_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/sign_in_button"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/_14sdp" />


        </RelativeLayout>
        <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
            android:id="@+id/create_account_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:padding="@dimen/_5sdp"
            android:text="@string/create_account"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/forgot_password_textview"/>

        <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
            android:id="@+id/forgot_password_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/forgot_password"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:text="@string/sign_in"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@+id/enter_username_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView31"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="@dimen/_4sdp"
            app:layout_constraintBottom_toTopOf="@+id/textView27"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_app_logo" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>