<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:background="@color/loginColorBlack"
        android:layout_height="match_parent"
        >


        <ImageView
            android:id="@+id/imageView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.328"
            app:srcCompat="@drawable/ic_happy" />

        <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/_14sdp"
            android:text="@string/acctivate_kiki"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView27" />

        <lk.mobilevisions.kiki.audio.util.KikiAudioMediumTextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/_12sdp"
            android:text="@string/trial_period_text"
           android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />


        <lk.mobilevisions.kiki.audio.util.KikiAudioMediumTextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/_12sdp"
            android:text="@string/trial_period__settings_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />


        <RelativeLayout
            android:id="@+id/enter_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="42dp"
            android:layout_marginStart="42dp"
            android:background="@drawable/rounded_login_button1"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center">

                <lk.mobilevisions.kiki.audio.util.KikiAudioBoldTextView
                    android:id="@+id/confirm_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/enter_kiki"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/_14sdp" />


            </RelativeLayout>


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>